<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation.MainNavigationActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_navigation_guideline5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_navigation_guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_navigation_guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <Button
        android:id="@+id/household_waste_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/live_rubbish_label"
        app:layout_constraintBottom_toTopOf="@+id/main_navigation_guideline5"
        app:layout_constraintEnd_toStartOf="@+id/main_navigation_guideline15"
        app:layout_constraintStart_toStartOf="@+id/main_navigation_guideline13"
        app:layout_constraintTop_toTopOf="@+id/main_navigation_guideline5" />

    <Button
        android:id="@+id/kitchen_rubbish_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/kitchen_rubbish_label"
        app:layout_constraintBottom_toTopOf="@+id/main_navigation_guideline6"
        app:layout_constraintEnd_toStartOf="@+id/main_navigation_guideline15"
        app:layout_constraintStart_toStartOf="@+id/main_navigation_guideline13"
        app:layout_constraintTop_toTopOf="@+id/main_navigation_guideline6" />

    <Button
        android:id="@+id/sijiqing_center_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sijiqing_center_label"
        app:layout_constraintBottom_toTopOf="@+id/main_navigation_guideline7"
        app:layout_constraintEnd_toStartOf="@+id/main_navigation_guideline15"
        app:layout_constraintStart_toStartOf="@+id/main_navigation_guideline13"
        app:layout_constraintTop_toTopOf="@+id/main_navigation_guideline7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_navigation_guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_navigation_guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

</androidx.constraintlayout.widget.ConstraintLayout>